--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 
 ![logo](https://github.com/abhigyan31/abhigyan31/blob/main/banner.JPG)
 <h1 align="center">Hi 👋, I'm Abhigyan Nath</h1>
-<h3 align="center">A passionate Web Developer and a cybersecurity aspirant.</h3>
+<h3 align="center">A passionate Web Developer and a cybersecurity aspirant...</h3>
 <img align="right" alt="coding" width="400" src="https://camo.githubusercontent.com/14a82c9065ad50c7e8ef3fdf2463d22b0ef77c23c43784378e709d588130a58c/68747470733a2f2f7374617469632e7769787374617469632e636f6d2f6d656469612f6262653634325f36323431346535306265663334636532386462316166616266353566313765637e6d76322e676966"
 
 <p align="left"> <img src="https://komarev.com/ghpvc/?username=abhigyan31&label=Profile%20views&color=0e75b6&style=flat" alt="abhigyan31" /> </p>
 
-- 📫 How to reach me **https://www.linkedin.com/in/abhigyan-nath-57062621b/**
+- 📫 How to reach mee **https://www.linkedin.com/in/abhigyan-nath-57062621b/**
 
-<h3 align="left">Connect with me:</h3>
+<h3 align="left">Connect with mee:</h3>
 <p align="left">
 <a href="https://twitter.com/abhigyan2k24" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/twitter.svg" alt="abhigyan2k24" height="30" width="40" /></a>
 <a href="https://linkedin.com/in/abhigyan nath" target="blank"><img align="center" src="https://raw.githubusercontent.com/rahuldkjain/github-profile-readme-generator/master/src/images/icons/Social/linked-in-alt.svg" alt="abhigyan nath" height="30" width="40" /></a>
